<resources>
    <string name="app_name">Eat Map UAA</string>
    <string name="contraseña">Contraseña</string>
    <string name="correo">Correo</string>
    <string name="nombre">Nombre</string>
    <string name="apellido">Apellidos</string>
    <string name="telefono">Teléfono</string>
    <string name="email">Email</string>
    <string name="login">Login</string>
    <string name="crearCuenta">Regístrate</string>
    <string name="mensajeCrearC">¿Aún no cuentas con una cuenta?</string>
    <string name="ordenar">Ordenar</string>
    <string name="baseURL">http://192.168.1.163:3000/</string>

    <string-array name="tipoCliente">
        <item>Cliente</item>
        <item>Administrativo</item>
        <item>Encargado</item>
    </string-array>

</resources>